# rssatom

./: README.md  notes.txt  pyproject.toml
src/rssatom/: __about__.py  rssatom2html.py
tests/: x.sh
